modified some css

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -5,24 +5,26 @@
     <link rel = "stylesheet" type = "text/css" href = "style/main.css" />
   </head>
   <body>
-    <div class="box header">
+    <div class="header">
       <h1 class="__mainTitle">Your Week</h1>
     </div>
-    <div class="box day-selection-bar">
-      <div class="__day-button" id="day-button-template">
+    <div class="day-selection-bar">
+      <div class="__day-button template">
         <h2 class="__day-name">Day Name</h1>
         <p class="__task-numbers"><span>X</span> task(s) left.</p>
       </div>
     </div>
-    <div class="box day-card">
+    <div class="day-card">
       <div class="__day-title">
         DAY TITLE
       </div>
       <div class="__tasks-to-display">
-        TASKS
+        <div class="template task-card">
+
+        </div>
       </div>
     </div>
-    <div class="box footer">
+    <div class="footer">
       test footer
     </div>
   </body>
