made some css color tweaks.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -7,7 +7,7 @@
   <body>
     <div class="header">
       <h1 class="__mainTitle">Your Week</h1>
-      <span class="__date">Today is the [DATE].</span>
+      <span class="__date">[DATE]</span>
     </div>
     <div class="day-selection-bar">
       <div class="__day-button template">
