made a few tweaks to the css and html

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -9,10 +9,15 @@
       <h1 class="__mainTitle">Your Week</h1>
       <span class="__date">[DATE]</span>
     </div>
+    <div class="next-task">
+      <h1>Your Next Task</h1>
+      <span class="__task-title">[TITLE]</span>
+      <span class="__timer">00:00:00</span>
+    </div>
     <div class="day-selection-bar">
       <div class="__day-button template">
-        <h2 class="__day-name">Day Name</h1>
-        <p class="__task-numbers"><span> X </span> task(s) left.</p>
+        <h2 class="__day-name">Day Name</h2>
+        <div class="__task-numbers"><span> X </span> task(s) left.</div>
       </div>
     </div>
     <div class="day-card">
