added the styling of the next-task element

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -11,8 +11,8 @@
     </div>
     <div class="next-task">
       <h1>Your Next Task</h1>
-      <span class="__task-title">[TITLE]</span>
-      <span class="__timer">00:00:00</span>
+      <div class="__timer">01:53:40</div>
+      <div class="__task-title">Go do the dishes then go see what is up with the noise in the basement.</div>
     </div>
     <div class="day-selection-bar">
       <div class="__day-button template">
