added some animations to the header

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -6,13 +6,20 @@
   </head>
   <body>
     <div class="header">
-      <h1 class="__mainTitle">Your Week</h1>
-      <span class="__date">[DATE]</span>
+      <div class="__mainTitle">
+        <h1 class="weekx">Week 26</h1>
+        <h1 class="yourweek">Your Week</h1>
+      </div>
+      <div class="__time-container">
+        <span class="__text-second __date"></span>
+        <span class="__text-second __time"></span>
+      </div>
     </div>
     <div class="next-task">
       <h1>Your Next Task</h1>
       <div class="__timer">01:53:40</div>
-      <div class="__task-title">Go do the dishes then go see what is up with the noise in the basement.</div>
+      <div class="__task-title">Ex retinere fuere quoque est participes participes hoc adulteriorum mortem.
+      </div>
     </div>
     <div class="day-selection-bar">
       <div class="__day-button template">
