--- a/mainWindow.html
+++ b/mainWindow.html
@@ -17,8 +17,10 @@
     </div>
     <div class="next-task">
       <h1>Your Next Task</h1>
-      <div class="__timer">01:53:40</div>
-      <div class="__task-title">Ex retinere fuere quoque est participes participes hoc adulteriorum mortem.
+      <div class="__task-info">
+        <div class="__task-title">Ex retinere fuere quoque est participes participes hoc adulteriorum mortem.
+        </div>
+        <div class="__timer">01:53:40</div>
       </div>
     </div>
     <div class="day-selection-bar">
@@ -28,16 +30,70 @@
       </div>
     </div>
     <div class="day-card">
-      <span class="__day-title">
-        [DAY]
-      </span>
-      <div class="__tasks-to-display">
-        <div class="__template __task-card">
-          <h1 class="__task-title">[TITLE]</h1>
-          <p class="__day-description"><b>Description :</b><br>[DESC]</p>
-          <span class="start">Start</span> <span class="end">End</span>  <br>
-          <div class="__progress-bar">---------------------</div>
+      <span class="__title-task">Tasks</span>
+      <span class="__title-day">Monday</span>
+      <span class="__title-schedule">Schedule</span>
+      <div class="__tasks-box">
+        <div class="task">
+          <div class="__side-bar">
+            <div class="__complete-btn">✔ <br> Check Task</div>
+            <div class="__remove-btn">✘ <br> Delete Task</div>
+          </div>
+          <h1 class="__title">Do the dishes</h1>
+          <span class="__start-time">11:00</span>
         </div>
+        <div class="task">
+          <div class="__side-bar">
+            <div class="__complete-btn">✔ <br> Check Task</div>
+            <div class="__remove-btn">✘ <br> Delete Task</div>
+          </div>
+          <h1 class="__title">Feed the Cat</h1>
+          <span class="__start-time">14:00</span>
+        </div>
+        <div class="task">
+          <div class="__side-bar">
+            <div class="__complete-btn">✔ <br> Check Task</div>
+            <div class="__remove-btn">✘ <br> Delete Task</div>
+          </div>
+          <h1 class="__title">Go do the groceries</h1>
+          <span class="__start-time">17:00</span>
+        </div>
+        <div class="task">
+            <div class="__side-bar">
+              <div class="__complete-btn">✔ <br> Check Task</div>
+              <div class="__remove-btn">✘ <br> Delete Task</div>
+            </div>
+            <h1 class="__title">Feed the Cat</h1>
+            <span class="__start-time">14:00</span>
+          </div>
+          <div class="task">
+            <div class="__side-bar">
+              <div class="__complete-btn">✔ <br> Check Task</div>
+              <div class="__remove-btn">✘ <br> Delete Task</div>
+            </div>
+            <h1 class="__title">Go do the groceries</h1>
+            <span class="__start-time">17:00</span>
+          </div>
+          <div class="task">
+              <div class="__side-bar">
+                <div class="__complete-btn">✔ <br> Check Task</div>
+                <div class="__remove-btn">✘ <br> Delete Task</div>
+              </div>
+              <h1 class="__title">Feed the Cat</h1>
+              <span class="__start-time">14:00</span>
+            </div>
+            <div class="task">
+              <div class="__side-bar">
+                <div class="__complete-btn">✔ <br> Check Task</div>
+                <div class="__remove-btn">✘ <br> Delete Task</div>
+              </div>
+              <h1 class="__title">Go do the groceries</h1>
+              <span class="__start-time">17:00</span>
+            </div>
+      </div>
+      </div>
+      <div class="__schedule">
+      
       </div>
     </div>
     <div class="footer">
