added some first styling to the tasks.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -36,59 +36,61 @@
       <div class="__tasks-box">
         <div class="task">
           <div class="__side-bar">
+            <div class="__tip">></div>
             <div class="__complete-btn">✔ <br> Check Task</div>
             <div class="__remove-btn">✘ <br> Delete Task</div>
           </div>
-          <h1 class="__title">Do the dishes</h1>
-          <span class="__start-time">11:00</span>
+          <div class="__title">Do the dishes</div>
+          <div class="__start-time">11:00</div>
+          
         </div>
         <div class="task">
           <div class="__side-bar">
             <div class="__complete-btn">✔ <br> Check Task</div>
             <div class="__remove-btn">✘ <br> Delete Task</div>
           </div>
-          <h1 class="__title">Feed the Cat</h1>
-          <span class="__start-time">14:00</span>
+          <div class="__title">Feed the Cat</div>
+          <div class="__start-time">14:00</div>
         </div>
         <div class="task">
           <div class="__side-bar">
             <div class="__complete-btn">✔ <br> Check Task</div>
             <div class="__remove-btn">✘ <br> Delete Task</div>
           </div>
-          <h1 class="__title">Go do the groceries</h1>
-          <span class="__start-time">17:00</span>
+          <div class="__title">Go do the groceries</div>
+          <div class="__start-time">17:00</div>
         </div>
         <div class="task">
             <div class="__side-bar">
               <div class="__complete-btn">✔ <br> Check Task</div>
               <div class="__remove-btn">✘ <br> Delete Task</div>
             </div>
-            <h1 class="__title">Feed the Cat</h1>
-            <span class="__start-time">14:00</span>
+            <div class="__title">Feed the Cat</div>
+            <div class="__start-time">14:00</div>
           </div>
           <div class="task">
             <div class="__side-bar">
               <div class="__complete-btn">✔ <br> Check Task</div>
               <div class="__remove-btn">✘ <br> Delete Task</div>
             </div>
-            <h1 class="__title">Go do the groceries</h1>
-            <span class="__start-time">17:00</span>
+            <div class="__title">Go do the groceries</div>
+            <div class="__start-time">17:00</div>
           </div>
           <div class="task">
               <div class="__side-bar">
                 <div class="__complete-btn">✔ <br> Check Task</div>
                 <div class="__remove-btn">✘ <br> Delete Task</div>
               </div>
-              <h1 class="__title">Feed the Cat</h1>
-              <span class="__start-time">14:00</span>
+              <div class="__title">Feed the Cat</div>
+              <div class="__start-time">14:00</div>
             </div>
             <div class="task">
               <div class="__side-bar">
                 <div class="__complete-btn">✔ <br> Check Task</div>
                 <div class="__remove-btn">✘ <br> Delete Task</div>
               </div>
-              <h1 class="__title">Go do the groceries</h1>
-              <span class="__start-time">17:00</span>
+              <div class="__title">Go do the groceries</div>
+              <div class="__start-time">17:00</div>
             </div>
       </div>
       </div>
