changed some styling for the header, the next-task and the body

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -35,63 +35,41 @@
       <span class="__title-schedule">Schedule</span>
       <div class="__tasks-box">
         <div class="task">
-          <div class="__side-bar">
-            <div class="__tip">></div>
-            <div class="__complete-btn">✔ <br> Check Task</div>
-            <div class="__remove-btn">✘ <br> Delete Task</div>
+            <div class="__tab-main"></div>
+            <div class="__side-bar">
+            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
+            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
           <div class="__title">Do the dishes</div>
           <div class="__start-time">11:00</div>
-          
         </div>
         <div class="task">
-          <div class="__side-bar">
-            <div class="__complete-btn">✔ <br> Check Task</div>
-            <div class="__remove-btn">✘ <br> Delete Task</div>
-          </div>
-          <div class="__title">Feed the Cat</div>
-          <div class="__start-time">14:00</div>
-        </div>
-        <div class="task">
-          <div class="__side-bar">
-            <div class="__complete-btn">✔ <br> Check Task</div>
-            <div class="__remove-btn">✘ <br> Delete Task</div>
-          </div>
-          <div class="__title">Go do the groceries</div>
-          <div class="__start-time">17:00</div>
-        </div>
-        <div class="task">
+            <div class="__tab-main"></div>
             <div class="__side-bar">
-              <div class="__complete-btn">✔ <br> Check Task</div>
-              <div class="__remove-btn">✘ <br> Delete Task</div>
-            </div>
-            <div class="__title">Feed the Cat</div>
-            <div class="__start-time">14:00</div>
+            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
+            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="task">
+          <div class="__title">Do the dishes</div>
+          <div class="__start-time">11:00</div>
+        </div>
+        <div class="task">
+            <div class="__tab-main"></div>
             <div class="__side-bar">
-              <div class="__complete-btn">✔ <br> Check Task</div>
-              <div class="__remove-btn">✘ <br> Delete Task</div>
-            </div>
-            <div class="__title">Go do the groceries</div>
-            <div class="__start-time">17:00</div>
+            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
+            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="task">
-              <div class="__side-bar">
-                <div class="__complete-btn">✔ <br> Check Task</div>
-                <div class="__remove-btn">✘ <br> Delete Task</div>
-              </div>
-              <div class="__title">Feed the Cat</div>
-              <div class="__start-time">14:00</div>
-            </div>
-            <div class="task">
-              <div class="__side-bar">
-                <div class="__complete-btn">✔ <br> Check Task</div>
-                <div class="__remove-btn">✘ <br> Delete Task</div>
-              </div>
-              <div class="__title">Go do the groceries</div>
-              <div class="__start-time">17:00</div>
-            </div>
+          <div class="__title">Do the dishes</div>
+          <div class="__start-time">11:00</div>
+        </div>
+        <div class="task">
+            <div class="__tab-main"></div>
+            <div class="__side-bar">
+            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
+            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
+          </div>
+          <div class="__title">Do the dishes</div>
+          <div class="__start-time">11:00</div>
+        </div>
       </div>
       </div>
       <div class="__schedule">
