made the tab buttons fonctional

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -35,7 +35,7 @@
       <span class="__title-schedule">Schedule</span>
       <div class="__tasks-box">
         <div class="task">
-            <div class="__tab-main"></div>
+            <div class="__tab-main">〉</div>
             <div class="__side-bar">
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
@@ -44,7 +44,7 @@
           <div class="__start-time">11:00</div>
         </div>
         <div class="task">
-            <div class="__tab-main"></div>
+            <div class="__tab-main">〉</div>
             <div class="__side-bar">
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
@@ -53,7 +53,7 @@
           <div class="__start-time">11:00</div>
         </div>
         <div class="task">
-            <div class="__tab-main"></div>
+            <div class="__tab-main">〉</div>
             <div class="__side-bar">
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
@@ -62,7 +62,7 @@
           <div class="__start-time">11:00</div>
         </div>
         <div class="task">
-            <div class="__tab-main"></div>
+            <div class="__tab-main">〉</div>
             <div class="__side-bar">
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
