added more styling to the day-card element

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -40,7 +40,7 @@
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="__title">Do the dishes</div>
+          <div class="__title">Task A</div>
           <div class="__start-time">11:00</div>
         </div>
         <div class="task">
@@ -49,7 +49,7 @@
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="__title">Do the dishes</div>
+          <div class="__title">Task B</div>
           <div class="__start-time">11:00</div>
         </div>
         <div class="task">
@@ -58,7 +58,7 @@
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="__title">Do the dishes</div>
+          <div class="__title">Task C</div>
           <div class="__start-time">11:00</div>
         </div>
         <div class="task">
@@ -67,7 +67,7 @@
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="__title">Do the dishes</div>
+          <div class="__title">Task D</div>
           <div class="__start-time">11:00</div>
         </div>
       </div>
