added the more-info button

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -42,6 +42,7 @@
           </div>
           <div class="__title">Task A</div>
           <div class="__start-time">11:00</div>
+          <div class="__more-button">✖</div>
         </div>
         <div class="task">
             <div class="__tab-main">〉</div>
@@ -50,7 +51,8 @@
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
           <div class="__title">Task B</div>
-          <div class="__start-time">11:00</div>
+          <div class="__start-time">13:00</div>
+          <div class="__more-button">✖</div>
         </div>
         <div class="task">
             <div class="__tab-main">〉</div>
@@ -59,7 +61,8 @@
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
           <div class="__title">Task C</div>
-          <div class="__start-time">11:00</div>
+          <div class="__start-time">15:30</div>
+          <div class="__more-button">✖</div>
         </div>
         <div class="task">
             <div class="__tab-main">〉</div>
@@ -68,7 +71,8 @@
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
           <div class="__title">Task D</div>
-          <div class="__start-time">11:00</div>
+          <div class="__start-time">18:15</div>
+          <div class="__more-button">✖</div>
         </div>
       </div>
       </div>
