added the html and css for the schedule.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -75,9 +75,28 @@
           <div class="__more-button">✖</div>
         </div>
       </div>
-      </div>
       <div class="__schedule">
-      
+        <div class="__hours-labels">
+          <span class="__label">04:00</span>
+          <span class="__label">08:00</span>
+          <span class="__label">12:00</span>
+          <span class="__label">16:00</span>
+          <span class="__label">20:00</span>
+        </div>
+        <div class="__hour-spans">
+          <div class="__4-hours"></div>
+          <div class="__4-hours"></div>
+          <div class="__4-hours"></div>
+          <div class="__4-hours"></div>
+          <div class="__4-hours"></div>
+          <div class="__4-hours"></div>
+        </div>
+        <div class="__tasks-spans-box">
+          <div class="__task-spans" id="task1"></div>
+          <div class="__task-spans" id="task2"></div>
+          <div class="__task-spans" id="task3"></div>
+          <div class="__task-spans" id="task4"></div>
+        </div>
       </div>
     </div>
     <div class="footer">
