--- a/mainWindow.html
+++ b/mainWindow.html
@@ -74,6 +74,23 @@
           <div class="__start-time">18:15</div>
           <div class="__more-button">✖</div>
         </div>
+        <div class="task-card">
+          <div class="__sticker"></div>
+          <div class="__sticker-hover-important">
+            Important
+          </div>
+          <div class="__close-btn">✖</div>
+          <div class="__edit-btn">✎</div>
+          <h1 class="__task-title">Task A</h1>
+          <h3>Description: </h3>
+          <span class="__description">Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.</span>
+          <h3>Start: </h3>
+          <span class="__time">13:00</span>
+          <h3>End: </h3>
+          <span class="__time">15:00</span>
+          <h3>Time until start: </h3>
+          <div class="__timer">01:24:18</div>
+        </div>
       </div>
       <div class="__schedule">
         <div class="__hours-labels">
