added the animation to go to the in-depth task card.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -18,7 +18,7 @@
     <div class="next-task">
       <h1>Your Next Task</h1>
       <div class="__task-info">
-        <div class="__task-title">Ex retinere fuere quoque est participes participes hoc adulteriorum mortem.
+        <div class="__task-title">Task A
         </div>
         <div class="__timer">01:53:40</div>
       </div>
