added the importance sticker to the day card.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -75,13 +75,11 @@
           <div class="__more-button">✖</div>
         </div>
         <div class="task-card">
-          <div class="__sticker"></div>
+          <div class="__sticker">!</div>
           <div class="__sticker-hover-important">
-            Important
+            Important Task
           </div>
-          <div class="__close-btn">✖</div>
           <div class="__edit-btn">✎</div>
-          <h1 class="__task-title">Task A</h1>
           <h3>Description: </h3>
           <span class="__description">Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.</span>
           <h3>Start: </h3>
