added more styling to the in-depth task card.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -81,7 +81,15 @@
           </div>
           <div class="__edit-btn">✎</div>
           <h3>Description: </h3>
-          <span class="__description">Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.</span>
+          <p class="__description">Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+          </p>
           <h3>Start: </h3>
           <span class="__time">13:00</span>
           <h3>End: </h3>
