replaced the task and schedule examples with templates.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -18,9 +18,9 @@
     <div class="next-task">
       <h1>Your Next Task</h1>
       <div class="__task-info">
-        <div class="__task-title">Task A
+        <div class="__task-title">[TASK-TITLE]
         </div>
-        <div class="__timer">01:53:40</div>
+        <div class="__timer">[TIMER]</div>
       </div>
     </div>
     <div class="day-selection-bar">
@@ -29,73 +29,36 @@
         <div class="__task-numbers"><span> X </span> task(s) left.</div>
       </div>
     </div>
-    <div class="day-card">
+    <div class="day-card template">
       <span class="__title-task">Tasks</span>
-      <span class="__title-day">Monday</span>
+      <span class="__title-day">[DAY-NAME]</span>
       <span class="__title-schedule">Schedule</span>
       <div class="__tasks-box">
-        <div class="task">
+        <div class="task template">
             <div class="__tab-main">〉</div>
             <div class="__side-bar">
             <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
             <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
           </div>
-          <div class="__title">Task A</div>
-          <div class="__start-time">11:00</div>
+          <div class="__title">[TITLE]</div>
+          <div class="__start-time">[START-TIME]</div>
           <div class="__more-button">✖</div>
         </div>
-        <div class="task">
-            <div class="__tab-main">〉</div>
-            <div class="__side-bar">
-            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
-            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
-          </div>
-          <div class="__title">Task B</div>
-          <div class="__start-time">13:00</div>
-          <div class="__more-button">✖</div>
-        </div>
-        <div class="task">
-            <div class="__tab-main">〉</div>
-            <div class="__side-bar">
-            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
-            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
-          </div>
-          <div class="__title">Task C</div>
-          <div class="__start-time">15:30</div>
-          <div class="__more-button">✖</div>
-        </div>
-        <div class="task">
-            <div class="__tab-main">〉</div>
-            <div class="__side-bar">
-            <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
-            <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
-          </div>
-          <div class="__title">Task D</div>
-          <div class="__start-time">18:15</div>
-          <div class="__more-button">✖</div>
-        </div>
-        <div class="task-card">
-          <div class="__sticker">!</div>
+        <div class="task-card template">
+          <div class="__sticker-important">!</div>
           <div class="__sticker-hover-important">
             Important Task
           </div>
           <div class="__edit-btn">✎</div>
           <h3>Description: </h3>
-          <p class="__description">Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
-            Convectio praetorio praetorio alioqui exagitabat annonae ordinarias ea ipse ad ire exagitabat praefectus est quem discrimen discrimen praefectus tempestate inopia trusus exagitabat sit feritas atque tempestate quam militem semper dignitates.
+          <p class="__description">[DESC]
           </p>
           <h3>Start: </h3>
-          <span class="__time">13:00</span>
+          <span class="__time">[START-TIME]</span>
           <h3>End: </h3>
-          <span class="__time">15:00</span>
+          <span class="__time">[END-TIME]</span>
           <h3>Time until start: </h3>
-          <div class="__timer">01:24:18</div>
+          <div class="__timer">[TIMER]</div>
         </div>
       </div>
       <div class="__schedule">
@@ -115,10 +78,7 @@
           <div class="__4-hours"></div>
         </div>
         <div class="__tasks-spans-box">
-          <div class="__task-spans" id="task1"></div>
-          <div class="__task-spans" id="task2"></div>
-          <div class="__task-spans" id="task3"></div>
-          <div class="__task-spans" id="task4"></div>
+      
         </div>
       </div>
     </div>
