added styling to the footer.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -83,7 +83,10 @@
       </div>
     </div>
     <div class="footer">
-      test footer
+      <div class="__prev-w">➠</div>
+      <div class="__prev-d">➨</div>
+      <div class="__next-d">➨</div>
+      <div class="__next-w">➠</div>
     </div>
   </body>
   <script type="text/javascript", src="mainWindow.js"></script>
