added the button that will toggle the navigation bar.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -5,10 +5,10 @@
     <link rel = "stylesheet" type = "text/css" href = "style/main.css" />
   </head>
   <body>
+    <div class="nav-btn">≣</div>
     <div class="header">
       <div class="__mainTitle">
-        <h1 class="weekx">Week 26</h1>
-        <h1 class="yourweek">Your Week</h1>
+        <h1>Your Week</h1>
       </div>
       <div class="__time-container">
         <span class="__text-second __date"></span>
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="day-card template">
-      <span class="__title-task">Tasks</span>
+      <span class="__title-task">Tasks & Events</span>
       <span class="__title-day">[DAY-NAME]</span>
       <span class="__title-schedule">Schedule</span>
       <div class="__tasks-box">
