--- a/mainWindow.html
+++ b/mainWindow.html
@@ -39,7 +39,7 @@
               <div class="__tab-main">〉</div>
               <div class="__side-bar">
               <div class="__complete-btn"><span class="__icon">✔ </span><br> <span class="__label">Check Task</span> </div>
-              <div class="__remove-btn"><span class="__icon">✘ </span><br> <span class="__label">Delete Task</span> </div>
+              <div class="__remove-btn"><span class="__icon">╳ </span><br> <span class="__label">Delete Task</span> </div>
             </div>
             <div class="__title">[TITLE]</div>
             <div class="__start-time">[START-TIME]</div>
