--- a/mainWindow.html
+++ b/mainWindow.html
@@ -92,5 +92,6 @@
     </div>
   </body>
   <script type="text/javascript", src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript", src="user-managing.js"></script>
   <script type="text/javascript", src="mainWindow.js"></script>
 </html>
