--- a/mainWindow.html
+++ b/mainWindow.html
@@ -55,9 +55,9 @@
             <p class="__description">[DESC]
             </p>
             <h3>Start: </h3>
-            <span class="start-time">[START-TIME]</span>
+            <span class="__start-time">[START-TIME]</span>
             <h3>End: </h3>
-            <span class="end-time">[END-TIME]</span>
+            <span class="__end-time">[END-TIME]</span>
             <h3>Time until start: </h3>
             <div class="__timer">[TIMER]</div>
           </div>
