added event listeners to footer.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -31,7 +31,10 @@
     </div>
     <div class="day-card template">
       <span class="__title-task">Tasks & Events</span>
-      <span class="__title-day">[DAY-NAME]</span>
+      <div class="__title-day-container">
+        <span class="__day">[DAY-NAME]</span>
+        <span class="__date">00/00</span>
+      </div>
       <span class="__title-schedule">Schedule</span>
       <div class="__tasks-box">
         <div class="task template">
