changed variable names to make code clearer.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -29,15 +29,15 @@
         <div class="__task-numbers"><span> X </span> task(s) left.</div>
       </div>
     </div>
-    <div class="day-card template">
+    <div class="day-menu">
       <span class="__title-task">Tasks & Events</span>
       <div class="__title-day-container">
         <span class="__day">[DAY-NAME]</span>
-        <span class="__date">00/00</span>
+        <span class="__date-short">00/00</span>
       </div>
       <span class="__title-schedule">Schedule</span>
       <div class="__tasks-box">
-        <div class="task template">
+        <div class="task-card template">
             <div class="__tab-main">〉</div>
             <div class="__side-bar">
             <div class="__complete-btn"><span class="__icon">✓ </span><br> <span class="__label">Check Task</span> </div>
@@ -47,7 +47,7 @@
           <div class="__start-time">[START-TIME]</div>
           <div class="__more-button">✖</div>
         </div>
-        <div class="task-card template">
+        <div class="task-page template">
           <div class="__sticker-important">!</div>
           <div class="__sticker-hover-important">
             Important Task
