started working on the remove task option.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -92,7 +92,17 @@
       <div class="__next-w">➠</div>
     </div>
   </body>
+  <script>
+    if (typeof module === 'object') {
+      window.module = module; 
+      module = undefined;
+    }
+  </script>
   <script type="text/javascript", src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript", src="user-managing.js"></script>
   <script type="text/javascript", src="mainWindow.js"></script>
+  <script>
+    if (window.module) 
+      module = window.module;
+  </script>
 </html>
