--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title></title>
-    <link rel = "stylesheet" type = "text/css" href = "style/main.css" />
+    <link rel = "stylesheet" type = "text/css" href = "style/mainWindow/main.css" />
   </head>
   <body>
     <div class="nav-btn">≣</div>
