--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -9,12 +9,12 @@
         <div class="__close-btn"></div>
     </div>
     <div class="main">
-        <div class="__title"></div>
-        <div class="__desc"></div>
-        <div class="__start-time"></div>
-        <div class="__end-time"></div>
-        <div class="__important"></div>
-        <div class="__notify-setting"></div>
+        <input class="__title" placeholder="Title" required></input>
+        <input  class="__desc" placeholder="Description"></input>
+        <input type="time" class="__start-time" placeholder="Start Time"></input>
+        <input type="time" class="__end-time" placeholder="Start Time"></input>
+        <input type="radio" class="__important"></input>
+        <input class="__notify-setting"></input>
     </div>
 </body>
 </html>
