--- a/mainWindow.html
+++ b/mainWindow.html
@@ -5,94 +5,89 @@
     <link rel = "stylesheet" type = "text/css" href = "style/mainWindow/main.css" />
   </head>
   <body>
-    <div class="nav-btn">≣</div>
-    <div class="header">
-      <div class="__mainTitle">
-        <h1>Your Week</h1>
-      </div>
-      <div class="__time-container">
-        <span class="__text-second __date"></span>
-        <span class="__text-second __time"></span>
+    <div class="header of-hidden no-padd vt-align-flex rel border-grey-1">
+      <div class="__mainTitle wp-pre h-fit fs-3 upper fw-1 w-fit">Your Week</div>
+      <div class="__next-task abs border-grey-1">
+        <div class="__task-title h-100 vt-align-flex fs-175 of-y-hidden ws-pre">Take out the trash.</div>
+        <div class="__timer vt-align-flex hz-align-flex fs-2">03:34:23</div>
       </div>
     </div>
-    <div class="next-task">
-      <h1>Your Next Task</h1>
-      <div class="__task-info">
-        <div class="__task-title">[TASK-TITLE]
-        </div>
-        <div class="__timer">[TIMER]</div>
+    <div class="navigation-bar border-grey-1">
+      <div class="__day-label">
+        <div class="__day-name">Monday</div>
+        <div class="__day-date">08/07</div>
       </div>
-    </div>
-    <div class="day-selection-bar">
-      <div class="__day-button template">
-        <h2 class="__day-name">Day Name</h2>
-        <div class="__task-numbers"><span> X </span> task(s) left.</div>
+      <div class="__add-task-btn">+</div>
+      <div class="__calendar-btn">Calendar</div>
+      <div class="__completed-tasks">
+        <div class="__check-box"></div>
+        <div class="__label">See completed tasks</div>
       </div>
+      <div class="__important-tasks">
+        <div class="__check-box"></div>
+        <div class="__label">See important tasks only</div>
+      </div>
+      <div class="__prev-day">
+        <div class="__icon"></div>
+      </div>
+      <div class="__next-day">
+        <div class="__icon"></div>
+      </div>
+      <div class="__prev-week">
+        <div class="__icon"></div>
+      </div>
+      <div class="__next-week">
+        <div class="__icon"></div>
+      </div>
+
     </div>
     <div class="day-menu">
-      <span class="__title-task">Tasks & Events</span>
-      <div class="__title-day-container">
-        <span class="__day">[DAY-NAME]</span>
-        <span class="__date-short">00/00</span>
-      </div>
-      <span class="__title-schedule">Schedule</span>
-      <div class="__tasks-box">
-        <div class="task-card template">
-            <div class="__tab-main">〉</div>
-            <div class="__side-bar">
-            <div class="__complete-btn"><span class="__icon">✓ </span><br> <span class="__label">Check Task</span> </div>
-            <div class="__remove-btn"><span class="__icon">✗ </span><br> <span class="__label">Delete Task</span> </div>
-          </div>
+      <div class="task-card template">
+        <div class="__complete-btn"><span class="__icon">✓ </span><br> <span class="__label">Check Task</span> </div>
+        <div class="__remove-btn"><span class="__icon">✗ </span><br> <span class="__label">Delete Task</span> </div>
+        <div class="__main">
           <div class="__title">[TITLE]</div>
           <div class="__start-time">[START-TIME]</div>
           <div class="__more-button">✖</div>
         </div>
-        <div class="task-page template">
-          <div class="__sticker-important">!</div>
-          <div class="__sticker-hover-important">
-            Important Task
-          </div>
-          <div class="__edit-btn">✎</div>
-          <h3>Description: </h3>
-          <p class="__description">[DESC]
-          </p>
-          <h3>Start: </h3>
-          <span class="__start-time">[START-TIME]</span>
-          <h3>End: </h3>
-          <span class="__end-time">[END-TIME]</span>
-          <h3>Time until start: </h3>
-          <div class="__timer">[TIMER]</div>
-        </div>
       </div>
-      <div class="__schedule">
-        <div class="__hours-labels">
-          <span class="__label">04:00</span>
-          <span class="__label">08:00</span>
-          <span class="__label">12:00</span>
-          <span class="__label">16:00</span>
-          <span class="__label">20:00</span>
+      <div class="task-page template">
+        <div class="__sticker-important">!</div>
+        <div class="__sticker-hover-important">
+          Important Task
         </div>
-        <div class="__hour-spans">
-          <div class="__4-hours"></div>
-          <div class="__4-hours"></div>
-          <div class="__4-hours"></div>
-          <div class="__4-hours"></div>
-          <div class="__4-hours"></div>
-          <div class="__4-hours"></div>
-        </div>
-        <div class="__tasks-spans-box">
-      
-        </div>
+        <div class="__edit-btn">✎</div>
+        <h3>Description: </h3>
+        <p class="__description">[DESC]
+        </p>
+        <h3>Start: </h3>
+        <span class="__start-time">[START-TIME]</span>
+        <h3>End: </h3>
+        <span class="__end-time">[END-TIME]</span>
+        <h3>Countdown: </h3>
+        <div class="__timer">[TIMER]</div>
+        <h3>Repeat: </h3>
+        <div class="__timer">None.</div>
+        <h3>Notification: </h3>
+        <div class="__timer">None.</div>
       </div>
     </div>
-    <div class="footer">
-      <div class="__prev-w">➠</div>
-      <div class="__prev-d">➨</div>
-      <div class="__next-d">➨</div>
-      <div class="__next-w">➠</div>
+    <div class="__schedule">
+      <div class="__hour-spans">
+        <div class="__4-hours"></div>
+        <div class="__4-hours"></div>
+        <div class="__4-hours"></div>
+        <div class="__4-hours"></div>
+        <div class="__4-hours"></div>
+        <div class="__4-hours"></div>
+      </div>
+      <div class="__tasks-spans-box">
+    
+      </div>
+    </div>
     </div>
   </body>
-  <script>
+  <!-- <script>
     if (typeof module === 'object') {
       window.module = module; 
       module = undefined;
@@ -104,5 +99,5 @@
   <script>
     if (window.module) 
       module = window.module;
-  </script>
+  </script> -->
 </html>
