--- a/mainWindow.html
+++ b/mainWindow.html
@@ -7,17 +7,17 @@
   <body>
     <div class="header of-hidden no-padd vt-align-flex rel border-grey-1">
       <div class="__mainTitle wp-pre h-fit fs-3 upper fw-1 w-fit">Your Week</div>
-      <div class="__next-task abs border-grey-1">
+      <div class="__next-task abs border-grey-1 pointer">
         <div class="__task-title h-100 vt-align-flex fs-175 of-y-hidden ws-pre">Take out the trash.</div>
         <div class="__timer vt-align-flex hz-align-flex fs-2">03:34:23</div>
       </div>
     </div>
-    <div class="navigation-bar border-grey-1">
-      <div class="__day-label">
+    <div class="navigation-bar border-grey-1 hz-align-text rel no-padd">
+      <div class="__day-label hz-align-margins border-grey-05 fs-2">
         <div class="__day-name">Monday</div>
         <div class="__day-date">08/07</div>
       </div>
-      <div class="__add-task-btn">+</div>
+      <div class="__add-task-btn red border-grey-05 br-50 hz-align-margins pointer">+</div>
       <div class="__calendar-btn">Calendar</div>
       <div class="__completed-tasks">
         <div class="__check-box"></div>
