added the calendar button and the checkboxes to the navigation bar.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -17,26 +17,28 @@
         <div class="__day-name">Monday</div>
         <div class="__day-date">08/07</div>
       </div>
-      <div class="__add-task-btn red border-grey-05 br-50 hz-align-margins pointer">+</div>
-      <div class="__calendar-btn">Calendar</div>
-      <div class="__completed-tasks">
-        <div class="__check-box"></div>
+      <div class="__add-task-btn border-grey-05 br-50 hz-align-margins pointer">
+        <div class="__icon vt-align-flex hz-align-flex">+</div>
+      </div>
+      <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer">Calendar</div>
+      <div class="__completed-tasks pointer">
+        <div class="__check-box checked"></div>
         <div class="__label">See completed tasks</div>
       </div>
-      <div class="__important-tasks">
+      <div class="__important-tasks pointer">
         <div class="__check-box"></div>
         <div class="__label">See important tasks only</div>
       </div>
-      <div class="__prev-day">
+      <div class="__prev-day nav-btn">
         <div class="__icon"></div>
       </div>
-      <div class="__next-day">
+      <div class="__next-day nav-btn">
         <div class="__icon"></div>
       </div>
-      <div class="__prev-week">
+      <div class="__prev-week nav-btn">
         <div class="__icon"></div>
       </div>
-      <div class="__next-week">
+      <div class="__next-week nav-btn">
         <div class="__icon"></div>
       </div>
 
