added the navigation buttons (and an assets dir for the svg icon files.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -29,19 +29,22 @@
         <div class="__check-box"></div>
         <div class="__label">See important tasks only</div>
       </div>
-      <div class="__prev-day nav-btn">
-        <div class="__icon"></div>
+      <div class="__nav-button-box row-1 h-fit">
+        <div class="__prev-day nav-btn vt-align-flex hz-align-flex">
+            <img class="__icon" src="assets/left-arrow-single.svg" alt="Previous day">
+        </div>
+        <div class="__next-day nav-btn vt-align-flex hz-align-flex">
+            <img class="__icon" src="assets/right-arrow-single.svg" alt="Next day">
+        </div>
       </div>
-      <div class="__next-day nav-btn">
-        <div class="__icon"></div>
+      <div class="__nav-button-box row-2 h-fit">
+        <div class="__prev-week nav-btn vt-align-flex hz-align-flex">
+            <img class="__icon" src="assets/left-arrow-double.svg" alt="Previous week">
+        </div>
+        <div class="__next-week nav-btn vt-align-flex hz-align-flex">
+            <img class="__icon" src="assets/right-arrow-double.svg" alt="Next week">
+        </div>
       </div>
-      <div class="__prev-week nav-btn">
-        <div class="__icon"></div>
-      </div>
-      <div class="__next-week nav-btn">
-        <div class="__icon"></div>
-      </div>
-
     </div>
     <div class="day-menu">
       <div class="task-card template">
